# pluto

./: .gitignore  LICENSE  README.md  benchmark_all.py  benchmark_results.json
5 steps/: common.py  sim1  sim3.py  sim4.py  sim5.py
cpp/: CMakeLists.txt
cpp/src/: benchmark.cpp  initial_conditions.hpp  integrators.hpp  physics.hpp  system.hpp
julia/: Manifest.toml  Project.toml
julia/scripts/: benchmark.jl  interactive.jl
julia/src/: PlutoSim.jl
python/: benchmark_python.py  common.py  plutoandgiants  solarsystem
resource 2d/: binary2d  solarsim2d
resource 3d/: binary_star.py  realsim.py  solar_constants.py  solar_sim.py  solar_system.py  vectors.py
